security/iptables_dump.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Dec  5 15:57:17 2025
*mangle
:PREROUTING ACCEPT [19127372:50876414135]
:INPUT ACCEPT [6086460:3029421754]
:FORWARD ACCEPT [13035634:47845613323]
:OUTPUT ACCEPT [5945064:6378401062]
:POSTROUTING ACCEPT [19005927:54232232299]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Fri Dec  5 15:57:17 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Dec  5 15:57:17 2025
*raw
:PREROUTING ACCEPT [19127372:50876414135]
:OUTPUT ACCEPT [5945064:6378401062]
-A PREROUTING -d 172.20.0.2/32 ! -i br-12717693d2dc -j DROP
-A PREROUTING -d 172.21.0.2/32 ! -i br-693b2f32ccd3 -j DROP
-A PREROUTING -d 172.23.0.2/32 ! -i br-824a148737c7 -j DROP
-A PREROUTING -d 172.25.0.2/32 ! -i br-20128ee26c19 -j DROP
-A PREROUTING -d 172.25.0.3/32 ! -i br-20128ee26c19 -j DROP
-A PREROUTING -d 172.25.0.4/32 ! -i br-20128ee26c19 -j DROP
-A PREROUTING -d 172.19.0.3/32 ! -i br-89c4582633fc -j DROP
-A PREROUTING -d 172.19.0.4/32 ! -i br-89c4582633fc -j DROP
-A PREROUTING -d 172.19.0.5/32 ! -i br-89c4582633fc -j DROP
-A PREROUTING -d 172.17.0.2/32 ! -i docker0 -j DROP
-A PREROUTING -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -j DROP
-A PREROUTING -d 172.17.0.3/32 ! -i docker0 -j DROP
-A PREROUTING -d 172.29.0.2/32 ! -i br-8f6fe61f1186 -j DROP
-A PREROUTING -d 172.17.0.4/32 ! -i docker0 -j DROP
-A PREROUTING -d 172.24.0.2/32 ! -i br-0108915db312 -j DROP
-A PREROUTING -d 172.17.0.5/32 ! -i docker0 -j DROP
-A PREROUTING -d 172.27.0.3/32 ! -i br-3c5325af5565 -j DROP
-A PREROUTING -d 172.19.0.2/32 ! -i br-89c4582633fc -j DROP
-A PREROUTING -d 172.17.0.6/32 ! -i docker0 -j DROP
-A PREROUTING -d 172.30.0.2/32 ! -i br-7278d40d06c5 -j DROP
-A PREROUTING -d 172.26.0.2/32 ! -i br-9eac222078a2 -j DROP
-A PREROUTING -d 172.27.0.2/32 ! -i br-3c5325af5565 -j DROP
COMMIT
# Completed on Fri Dec  5 15:57:17 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Dec  5 15:57:17 2025
*filter
:INPUT ACCEPT [4211338:1666925522]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5944796:6378311042]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
-A INPUT -j ts-input
-A INPUT -j LIBVIRT_INP
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A INPUT -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8083 -m comment --comment "AMP Management Instance" -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 9010 -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 9010 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 9050 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 25501 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 25502 -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 25502 -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 25501 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 25501 -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 9050 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 25501 -j ACCEPT
-A INPUT -i wg0 -p udp -m udp --dport 25501 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 25572 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j ts-forward
-A FORWARD -d 192.168.122.15/32 -i wg0 -o virbr0 -p tcp -m tcp --dport 8095 -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i wg0 -o virbr0 -p udp -m udp --dport 30988 -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i wg0 -o virbr0 -p tcp -m tcp --dport 30988 -j ACCEPT
-A FORWARD -s 192.168.122.15/32 -i virbr0 -o wg0 -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i wg0 -o virbr0 -p udp -m udp --dport 30312 -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i wg0 -o virbr0 -p tcp -m tcp --dport 30312 -j ACCEPT
-A FORWARD -i virbr0 -o tailscale0 -j ACCEPT
-A FORWARD -i tailscale0 -o virbr0 -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A FORWARD -i virbr0 -o enp0s31f6 -j ACCEPT
-A FORWARD -i enp0s31f6 -o virbr0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i tailscale0 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i tailscale0 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 192.168.122.15/32 -i tailscale0 -o virbr0 -p tcp -m tcp --dport 3389 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.15/32 -i virbr0 -o tailscale0 -p tcp -m tcp --sport 3389 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -j LIBVIRT_OUT
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A OUTPUT -p udp -m udp --sport 51820 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 51820 -j ACCEPT
-A DOCKER -d 172.27.0.2/32 ! -i br-3c5325af5565 -o br-3c5325af5565 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 172.26.0.2/32 ! -i br-9eac222078a2 -o br-9eac222078a2 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.30.0.2/32 ! -i br-7278d40d06c5 -o br-7278d40d06c5 -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER -d 172.17.0.6/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 3001 -j ACCEPT
-A DOCKER -d 172.29.0.2/32 ! -i br-8f6fe61f1186 -o br-8f6fe61f1186 -p tcp -m tcp --dport 3001 -j ACCEPT
-A DOCKER -d 172.24.0.2/32 ! -i br-0108915db312 -o br-0108915db312 -p tcp -m tcp --dport 5216 -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8200 -j ACCEPT
-A DOCKER -d 172.17.0.4/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.17.0.4/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 81 -j ACCEPT
-A DOCKER -d 172.17.0.4/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25600 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25599 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25598 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25597 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25596 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25595 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25594 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25593 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25592 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25591 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25590 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25589 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25588 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25587 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25586 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25585 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25584 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25583 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25582 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25581 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25580 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25579 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25578 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25577 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25576 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25575 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25574 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25573 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25572 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25571 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25570 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25569 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25568 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25567 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25566 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25565 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25564 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25563 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25562 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25561 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25560 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25559 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25558 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25557 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25556 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25555 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25554 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25553 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25552 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25551 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25550 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25549 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25548 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25547 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25546 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25545 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25544 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25543 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25542 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25541 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25540 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25539 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25538 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25537 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25536 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25535 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25534 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25533 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25532 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25531 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25530 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25529 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25528 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25527 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25526 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25525 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25524 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25523 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25522 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25521 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25520 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25519 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25518 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25517 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25516 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25515 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25514 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25513 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25512 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25511 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25510 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25509 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25508 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25507 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25506 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25505 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25504 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25503 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25502 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25501 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 25500 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p udp -m udp --dport 19132 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 8443 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -p tcp -m tcp --dport 8123 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 4533 -j ACCEPT
-A DOCKER ! -i br-693b2f32ccd3 -o br-693b2f32ccd3 -j DROP
-A DOCKER ! -i br-7278d40d06c5 -o br-7278d40d06c5 -j DROP
-A DOCKER ! -i br-9eac222078a2 -o br-9eac222078a2 -j DROP
-A DOCKER ! -i br-ba84cc9ced81 -o br-ba84cc9ced81 -j DROP
-A DOCKER ! -i br-e9b55899d303 -o br-e9b55899d303 -j DROP
-A DOCKER ! -i br-0108915db312 -o br-0108915db312 -j DROP
-A DOCKER ! -i br-04ef76b5bd5e -o br-04ef76b5bd5e -j DROP
-A DOCKER ! -i br-3c5325af5565 -o br-3c5325af5565 -j DROP
-A DOCKER ! -i br-77b1bfcf8266 -o br-77b1bfcf8266 -j DROP
-A DOCKER ! -i br-797bad0d6ba2 -o br-797bad0d6ba2 -j DROP
-A DOCKER ! -i br-824a148737c7 -o br-824a148737c7 -j DROP
-A DOCKER ! -i br-89c4582633fc -o br-89c4582633fc -j DROP
-A DOCKER ! -i br-8f6fe61f1186 -o br-8f6fe61f1186 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-693b2f32ccd3 -j DOCKER
-A DOCKER-BRIDGE -o br-7278d40d06c5 -j DOCKER
-A DOCKER-BRIDGE -o br-9eac222078a2 -j DOCKER
-A DOCKER-BRIDGE -o br-ba84cc9ced81 -j DOCKER
-A DOCKER-BRIDGE -o br-e9b55899d303 -j DOCKER
-A DOCKER-BRIDGE -o br-0108915db312 -j DOCKER
-A DOCKER-BRIDGE -o br-04ef76b5bd5e -j DOCKER
-A DOCKER-BRIDGE -o br-3c5325af5565 -j DOCKER
-A DOCKER-BRIDGE -o br-77b1bfcf8266 -j DOCKER
-A DOCKER-BRIDGE -o br-797bad0d6ba2 -j DOCKER
-A DOCKER-BRIDGE -o br-824a148737c7 -j DOCKER
-A DOCKER-BRIDGE -o br-89c4582633fc -j DOCKER
-A DOCKER-BRIDGE -o br-8f6fe61f1186 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-693b2f32ccd3 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-7278d40d06c5 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-9eac222078a2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-ba84cc9ced81 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-e9b55899d303 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-0108915db312 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-04ef76b5bd5e -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-3c5325af5565 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-77b1bfcf8266 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-797bad0d6ba2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-824a148737c7 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-89c4582633fc -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-8f6fe61f1186 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-693b2f32ccd3 -j ACCEPT
-A DOCKER-FORWARD -i br-7278d40d06c5 -j ACCEPT
-A DOCKER-FORWARD -i br-9eac222078a2 -j ACCEPT
-A DOCKER-FORWARD -i br-ba84cc9ced81 -j ACCEPT
-A DOCKER-FORWARD -i br-e9b55899d303 -j ACCEPT
-A DOCKER-FORWARD -i br-0108915db312 -j ACCEPT
-A DOCKER-FORWARD -i br-04ef76b5bd5e -j ACCEPT
-A DOCKER-FORWARD -i br-3c5325af5565 -j ACCEPT
-A DOCKER-FORWARD -i br-77b1bfcf8266 -j ACCEPT
-A DOCKER-FORWARD -i br-797bad0d6ba2 -j ACCEPT
-A DOCKER-FORWARD -i br-824a148737c7 -j ACCEPT
-A DOCKER-FORWARD -i br-89c4582633fc -j ACCEPT
-A DOCKER-FORWARD -i br-8f6fe61f1186 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-693b2f32ccd3 ! -o br-693b2f32ccd3 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-7278d40d06c5 ! -o br-7278d40d06c5 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-9eac222078a2 ! -o br-9eac222078a2 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-ba84cc9ced81 ! -o br-ba84cc9ced81 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-e9b55899d303 ! -o br-e9b55899d303 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-0108915db312 ! -o br-0108915db312 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-04ef76b5bd5e ! -o br-04ef76b5bd5e -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-3c5325af5565 ! -o br-3c5325af5565 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-77b1bfcf8266 ! -o br-77b1bfcf8266 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-797bad0d6ba2 ! -o br-797bad0d6ba2 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-824a148737c7 ! -o br-824a148737c7 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-89c4582633fc ! -o br-89c4582633fc -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-8f6fe61f1186 ! -o br-8f6fe61f1186 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-8f6fe61f1186 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-89c4582633fc -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-824a148737c7 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-797bad0d6ba2 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-77b1bfcf8266 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-3c5325af5565 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-04ef76b5bd5e -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-0108915db312 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-e9b55899d303 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ba84cc9ced81 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-9eac222078a2 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-7278d40d06c5 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-693b2f32ccd3 -j DROP
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.64.0.10/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Fri Dec  5 15:57:17 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Dec  5 15:57:17 2025
*nat
:PREROUTING ACCEPT [152328:26088762]
:INPUT ACCEPT [95123:21789720]
:OUTPUT ACCEPT [380962:28390276]
:POSTROUTING ACCEPT [389120:28823308]
:DOCKER - [0:0]
:LIBVIRT_PRT - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -i wg0 -p tcp -m tcp --dport 8095 -j DNAT --to-destination 192.168.122.15:8095
-A PREROUTING -i wg0 -p udp -m udp --dport 30988 -j DNAT --to-destination 192.168.122.15
-A PREROUTING -i wg0 -p tcp -m tcp --dport 30988 -j DNAT --to-destination 192.168.122.15
-A PREROUTING -i wg0 -p udp -m udp --dport 30312 -j DNAT --to-destination 192.168.122.15
-A PREROUTING -i wg0 -p tcp -m tcp --dport 30312 -j DNAT --to-destination 192.168.122.15
-A PREROUTING -i tailscale0 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 192.168.122.15:3389
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/16 ! -o br-7278d40d06c5 -j MASQUERADE
-A POSTROUTING -s 172.29.0.0/16 ! -o br-8f6fe61f1186 -j MASQUERADE
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -s 172.26.0.0/16 ! -o br-9eac222078a2 -j MASQUERADE
-A POSTROUTING -s 10.88.88.0/24 -o virbr0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-e9b55899d303 -j MASQUERADE
-A POSTROUTING -s 172.28.0.0/16 ! -o br-ba84cc9ced81 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-89c4582633fc -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-77b1bfcf8266 -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-824a148737c7 -j MASQUERADE
-A POSTROUTING -s 172.22.0.0/16 ! -o br-797bad0d6ba2 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-693b2f32ccd3 -j MASQUERADE
-A POSTROUTING -s 172.27.0.0/16 ! -o br-3c5325af5565 -j MASQUERADE
-A POSTROUTING -s 172.25.0.0/16 ! -o br-04ef76b5bd5e -j MASQUERADE
-A POSTROUTING -s 172.24.0.0/16 ! -o br-0108915db312 -j MASQUERADE
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -s 192.168.122.0/24 -o enp0s31f6 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -o tailscale0 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -o tailscale0 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -o tailscale0 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -o tailscale0 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -o tailscale0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-8f6fe61f1186 -j RETURN
-A DOCKER -i br-89c4582633fc -j RETURN
-A DOCKER -i br-824a148737c7 -j RETURN
-A DOCKER -i br-797bad0d6ba2 -j RETURN
-A DOCKER -i br-77b1bfcf8266 -j RETURN
-A DOCKER -i br-3c5325af5565 -j RETURN
-A DOCKER -i br-04ef76b5bd5e -j RETURN
-A DOCKER -i br-0108915db312 -j RETURN
-A DOCKER -i br-e9b55899d303 -j RETURN
-A DOCKER -i br-ba84cc9ced81 -j RETURN
-A DOCKER -i br-9eac222078a2 -j RETURN
-A DOCKER -i br-7278d40d06c5 -j RETURN
-A DOCKER -i br-693b2f32ccd3 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 4533 -j DNAT --to-destination 172.17.0.3:4533
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 8123 -j DNAT --to-destination 172.25.0.2:8123
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 8443 -j DNAT --to-destination 172.25.0.2:8443
-A DOCKER ! -i br-04ef76b5bd5e -p udp -m udp --dport 19132 -j DNAT --to-destination 172.25.0.2:19132
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25500 -j DNAT --to-destination 172.25.0.2:25500
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25501 -j DNAT --to-destination 172.25.0.2:25501
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25502 -j DNAT --to-destination 172.25.0.2:25502
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25503 -j DNAT --to-destination 172.25.0.2:25503
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25504 -j DNAT --to-destination 172.25.0.2:25504
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25505 -j DNAT --to-destination 172.25.0.2:25505
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25506 -j DNAT --to-destination 172.25.0.2:25506
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25507 -j DNAT --to-destination 172.25.0.2:25507
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25508 -j DNAT --to-destination 172.25.0.2:25508
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25509 -j DNAT --to-destination 172.25.0.2:25509
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25510 -j DNAT --to-destination 172.25.0.2:25510
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25511 -j DNAT --to-destination 172.25.0.2:25511
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25512 -j DNAT --to-destination 172.25.0.2:25512
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25513 -j DNAT --to-destination 172.25.0.2:25513
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25514 -j DNAT --to-destination 172.25.0.2:25514
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25515 -j DNAT --to-destination 172.25.0.2:25515
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25516 -j DNAT --to-destination 172.25.0.2:25516
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25517 -j DNAT --to-destination 172.25.0.2:25517
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25518 -j DNAT --to-destination 172.25.0.2:25518
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25519 -j DNAT --to-destination 172.25.0.2:25519
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25520 -j DNAT --to-destination 172.25.0.2:25520
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25521 -j DNAT --to-destination 172.25.0.2:25521
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25522 -j DNAT --to-destination 172.25.0.2:25522
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25523 -j DNAT --to-destination 172.25.0.2:25523
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25524 -j DNAT --to-destination 172.25.0.2:25524
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25525 -j DNAT --to-destination 172.25.0.2:25525
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25526 -j DNAT --to-destination 172.25.0.2:25526
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25527 -j DNAT --to-destination 172.25.0.2:25527
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25528 -j DNAT --to-destination 172.25.0.2:25528
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25529 -j DNAT --to-destination 172.25.0.2:25529
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25530 -j DNAT --to-destination 172.25.0.2:25530
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25531 -j DNAT --to-destination 172.25.0.2:25531
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25532 -j DNAT --to-destination 172.25.0.2:25532
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25533 -j DNAT --to-destination 172.25.0.2:25533
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25534 -j DNAT --to-destination 172.25.0.2:25534
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25535 -j DNAT --to-destination 172.25.0.2:25535
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25536 -j DNAT --to-destination 172.25.0.2:25536
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25537 -j DNAT --to-destination 172.25.0.2:25537
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25538 -j DNAT --to-destination 172.25.0.2:25538
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25539 -j DNAT --to-destination 172.25.0.2:25539
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25540 -j DNAT --to-destination 172.25.0.2:25540
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25541 -j DNAT --to-destination 172.25.0.2:25541
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25542 -j DNAT --to-destination 172.25.0.2:25542
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25543 -j DNAT --to-destination 172.25.0.2:25543
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25544 -j DNAT --to-destination 172.25.0.2:25544
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25545 -j DNAT --to-destination 172.25.0.2:25545
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25546 -j DNAT --to-destination 172.25.0.2:25546
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25547 -j DNAT --to-destination 172.25.0.2:25547
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25548 -j DNAT --to-destination 172.25.0.2:25548
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25549 -j DNAT --to-destination 172.25.0.2:25549
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25550 -j DNAT --to-destination 172.25.0.2:25550
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25551 -j DNAT --to-destination 172.25.0.2:25551
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25552 -j DNAT --to-destination 172.25.0.2:25552
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25553 -j DNAT --to-destination 172.25.0.2:25553
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25554 -j DNAT --to-destination 172.25.0.2:25554
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25555 -j DNAT --to-destination 172.25.0.2:25555
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25556 -j DNAT --to-destination 172.25.0.2:25556
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25557 -j DNAT --to-destination 172.25.0.2:25557
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25558 -j DNAT --to-destination 172.25.0.2:25558
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25559 -j DNAT --to-destination 172.25.0.2:25559
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25560 -j DNAT --to-destination 172.25.0.2:25560
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25561 -j DNAT --to-destination 172.25.0.2:25561
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25562 -j DNAT --to-destination 172.25.0.2:25562
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25563 -j DNAT --to-destination 172.25.0.2:25563
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25564 -j DNAT --to-destination 172.25.0.2:25564
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25565 -j DNAT --to-destination 172.25.0.2:25565
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25566 -j DNAT --to-destination 172.25.0.2:25566
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25567 -j DNAT --to-destination 172.25.0.2:25567
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25568 -j DNAT --to-destination 172.25.0.2:25568
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25569 -j DNAT --to-destination 172.25.0.2:25569
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25570 -j DNAT --to-destination 172.25.0.2:25570
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25571 -j DNAT --to-destination 172.25.0.2:25571
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25572 -j DNAT --to-destination 172.25.0.2:25572
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25573 -j DNAT --to-destination 172.25.0.2:25573
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25574 -j DNAT --to-destination 172.25.0.2:25574
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25575 -j DNAT --to-destination 172.25.0.2:25575
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25576 -j DNAT --to-destination 172.25.0.2:25576
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25577 -j DNAT --to-destination 172.25.0.2:25577
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25578 -j DNAT --to-destination 172.25.0.2:25578
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25579 -j DNAT --to-destination 172.25.0.2:25579
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25580 -j DNAT --to-destination 172.25.0.2:25580
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25581 -j DNAT --to-destination 172.25.0.2:25581
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25582 -j DNAT --to-destination 172.25.0.2:25582
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25583 -j DNAT --to-destination 172.25.0.2:25583
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25584 -j DNAT --to-destination 172.25.0.2:25584
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25585 -j DNAT --to-destination 172.25.0.2:25585
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25586 -j DNAT --to-destination 172.25.0.2:25586
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25587 -j DNAT --to-destination 172.25.0.2:25587
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25588 -j DNAT --to-destination 172.25.0.2:25588
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25589 -j DNAT --to-destination 172.25.0.2:25589
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25590 -j DNAT --to-destination 172.25.0.2:25590
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25591 -j DNAT --to-destination 172.25.0.2:25591
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25592 -j DNAT --to-destination 172.25.0.2:25592
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25593 -j DNAT --to-destination 172.25.0.2:25593
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25594 -j DNAT --to-destination 172.25.0.2:25594
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25595 -j DNAT --to-destination 172.25.0.2:25595
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25596 -j DNAT --to-destination 172.25.0.2:25596
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25597 -j DNAT --to-destination 172.25.0.2:25597
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25598 -j DNAT --to-destination 172.25.0.2:25598
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25599 -j DNAT --to-destination 172.25.0.2:25599
-A DOCKER ! -i br-04ef76b5bd5e -p tcp -m tcp --dport 25600 -j DNAT --to-destination 172.25.0.2:25600
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.4:80
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 81 -j DNAT --to-destination 172.17.0.4:81
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.17.0.4:443
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8200 -j DNAT --to-destination 172.17.0.5:8200
-A DOCKER ! -i br-0108915db312 -p tcp -m tcp --dport 5216 -j DNAT --to-destination 172.24.0.2:5216
-A DOCKER ! -i br-8f6fe61f1186 -p tcp -m tcp --dport 3066 -j DNAT --to-destination 172.29.0.2:3001
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 3001 -j DNAT --to-destination 172.17.0.6:3001
-A DOCKER ! -i br-7278d40d06c5 -p tcp -m tcp --dport 3067 -j DNAT --to-destination 172.30.0.2:3000
-A DOCKER ! -i br-9eac222078a2 -p tcp -m tcp --dport 8087 -j DNAT --to-destination 172.26.0.2:8080
-A DOCKER ! -i br-3c5325af5565 -p tcp -m tcp --dport 8084 -j DNAT --to-destination 172.27.0.2:80
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Fri Dec  5 15:57:17 2025
